Add new 'TechSpeakers' activity (issue #209)

--- a/_includes/es/activities.html
+++ b/_includes/es/activities.html
@@ -1,4 +1,20 @@
 <div class="row is-flex">
+<div class="activity-card programming col-md-4">
+  <header class="item-header">
+    <img src="/assets/img/techspeakers-header.png" alt="Header image">
+  </header>
+  <h2><a href="/es/techspeakers/">Host a Technology Talk with Tech Speakers!</a></h2>
+  <div class="item-content" markdown="1">
+As Mozilla we’re working to help to keep the internet healthy, open and accessible to all but we can’t do it alone. We need to engage with people who are on the front lines of building the internet: web developers, designers, and other technologists who care about the open web. We need to get them excited about Mozilla as a technology leader.
+
+[Find out more](/es/techspeakers/).
+  </div>
+  <footer class="item-footer">
+    <div class="tags">Programming</div>
+    <div class="duration">1-2 hours</div>
+  </footer>
+</div>
+
 <div class="activity-card participation col-md-4">
   <header class="item-header">
     <img src="/assets/img/guidelines-header.png" alt="Header image">
