Add Event guide (issue #217)

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,6 +13,7 @@
 
     <div class="trigger collapse navbar-collapse" id="CollapsingNavbar">
       <a class="page-link" href="/{{ l.lang-url }}activities/">{{ l.activities }}</a>
+      <a class="page-link" href="/{{ l.lang-url }}eventguide/">{{ l.eventguide }}</a>
       <a class="page-link" href="/{{ l.lang-url }}faq/">{{ l.faq }}</a>
       <a class="page-link" href="/{{ l.lang-url }}leaderboard/">{{ l.leaderboard }}</a>
       <a class="page-link" href="/{{ l.lang-url }}participation/">{{ l.participation }}</a>
