--- a/_includes/pt/activities.html
+++ b/_includes/pt/activities.html
@@ -3,15 +3,15 @@
   <header class="item-header">
     <img src="/assets/img/techspeakers-header.png" alt="Header image">
   </header>
-  <h2><a href="/pt/techspeakers/">Host a Technology Talk with Tech Speakers!</a></h2>
+  <h2><a href="/pt/techspeakers/">Organize uma palestra de tecnologia com Tech Speakers!</a></h2>
   <div class="item-content" markdown="1">
-As Mozilla we’re working to help to keep the internet healthy, open and accessible to all but we can’t do it alone. We need to engage with people who are on the front lines of building the internet: web developers, designers, and other technologists who care about the open web. We need to get them excited about Mozilla as a technology leader.
+Na Mozilla nós estamos trabalhando para ajudar a manter a internet saudável, aberta e acessível a todos, precisamos nos envolver com pessoas que estão a frente da construção da Internet: desenvolvedores web, designers e outros tecnólogos que se preocupam com a web aberta. Precisamos animá-los sobre a Mozilla como uma líder de tecnologia.
 
-[Find out more](/pt/techspeakers/).
+[Saiba mais](/pt/techspeakers/).
   </div>
   <footer class="item-footer">
-    <div class="tags">Programming</div>
-    <div class="duration">1-2 hours</div>
+    <div class="tags">Programação</div>
+    <div class="duration">1-2 horas</div>
   </footer>
 </div>
 
@@ -19,15 +19,15 @@ As Mozilla we’re working to help to keep the internet healthy, open and access
   <header class="item-header">
     <img src="/assets/img/guidelines-header.png" alt="Header image">
   </header>
-  <h2><a href="/pt/community-participation-guideline/">Community Participation Guidelines</a></h2>
+  <h2><a href="/pt/community-participation-guideline/">Diretrizes de Participação Comunitária</a></h2>
   <div class="item-content" markdown="1">
-Larissa Shapiro, and the D&I Team at Mozilla have been busy this year, developing a 2.0 of the [Mozilla Community Participation](https://www.mozilla.org/en-US/about/governance/policies/participation/) Guidelines(CPG), and we are bringing [this draft to you](https://docs.google.com/document/d/1sElGXuZ0W31iPshvmj0CR2f6woF6V8wqrrJHzJ0pnpU/edit#heading=h.rf21kwgxk0hb), Mozilla's community, for feedback before release in early April. Completing this activity is a valuable contribution to Mozilla, and recognition of that contribution is included as a final step.
+Larissa Shapiro, e o time de D&I da Mozilla estiveram ocupados este ano desenvolvendo a versão 2.0 das [Diretrizes de Participação Comunitária da Mozilla (CPG)](https://www.mozilla.org/en-US/about/governance/policies/participation/), e estamos trazendo [este rascunho para você](https://docs.google.com/document/d/1sElGXuZ0W31iPshvmj0CR2f6woF6V8wqrrJHzJ0pnpU/edit#heading=h.rf21kwgxk0hb) e a comunidade Mozilla visando receber comentários/feedbacks antes do lançamento no início de abril. Completar esta atividade é uma contribuição valiosa para a Mozilla, e o reconhecimento dessa contribuição é incluído como uma etapa final.
 
 [Saiba mais](/pt/community-participation-guideline/).
   </div>
   <footer class="item-footer">
-    <div class="tags">Participation</div>
-    <div class="duration">2-3 hours</div>
+    <div class="tags">Participação</div>
+    <div class="duration">2-3 horas</div>
   </footer>
 </div>
 
@@ -35,15 +35,15 @@ Larissa Shapiro, and the D&I Team at Mozilla have been busy this year, developin
   <header class="item-header">
     <img src="/assets/img/webextensions-header.png" alt="Header image">
   </header>
-  <h2><a href="/pt/webextensions/">Build Your Own WebExtension Add-on for Firefox</a></h2>
+  <h2><a href="/pt/webextensions/">Construa sua própria WebExtension para o Firefox</a></h2>
   <div class="item-content" markdown="1">
-Add-ons provide a safe, simple, and powerful way to personalize your browsing experience. With WebExtensions APIs, it’s easier than ever to create extensions that can be easily ported to Firefox, Chrome, Edge, and Opera. Through this activity you’ll help connect new developers with an opportunity to create add-ons to solve real problems and make their lives and the web better.
+ Os complementos fornecem uma maneira segura, simples e poderosa de personalizar sua experiência de navegação. Com as APIs do WebExtensions, é mais fácil do que nunca criar extensões que podem ser portadas facilmente para o Firefox, Chrome, Edge e Opera. Através desta atividade você vai ajudar a conectar novos desenvolvedores com a oportunidade de criar complementos para resolver problemas reais e tornar suas vidas e a web melhor.
 
 [Saiba mais](/pt/webextensions/).
   </div>
   <footer class="item-footer">
-    <div class="tags">Programming</div>
-    <div class="duration">1-3 hours</div>
+    <div class="tags">Programação</div>
+    <div class="duration">1-3 horas</div>
   </footer>
 </div>
 
@@ -51,15 +51,15 @@ Add-ons provide a safe, simple, and powerful way to personalize your browsing ex
   <header class="item-header">
     <img src="/assets/img/rust-header.png" alt="Header image">
   </header>
-  <h2><a href="/pt/rust-hack/">Dive Into Rust</a></h2>
+  <h2><a href="/pt/rust-hack/">Mergulhe em Rust</a></h2>
   <div class="item-content" markdown="1">
 Rust é uma linguagem de programação para sistemas, importante para o futuro da Web. Ela roda extremamente rápido, previne falhas de acesso do sistema e garante a segurança dos processos. Com sua ajuda nós queremos que mais desenvolvedores entendam, usem e evangelizem essa linguagem, desta forma faremos a Web melhor e mais segura.
 
 [Saiba mais](/pt/rust-hack/).
   </div>
   <footer class="item-footer">
-    <div class="tags">Programming</div>
-    <div class="duration">2-3 hours</div>
+    <div class="tags">Programação</div>
+    <div class="duration">2-3 horas</div>
   </footer>
 </div>
 
@@ -74,8 +74,8 @@ O A-Frame é um framework web para o desenvolvimento de experiências com Realid
 [Saiba mais](/pt/webvr-camp/).
   </div>
   <footer class="item-footer">
-    <div class="tags">Programming</div>
-    <div class="duration">3-4 hours</div>
+    <div class="tags">Programação</div>
+    <div class="duration">3-4 horas</div>
   </footer>
 </div>
 
@@ -90,8 +90,8 @@ A Compatibilidade Web, capacidade de executar todo e qualquer conteúdo da Web e
 [Saiba mais](/pt/webcompat-sprint/).
   </div>
   <footer class="item-footer">
-    <div class="tags">Testing</div>
-    <div class="duration">2-3 hours</div>
+    <div class="tags">Teste</div>
+    <div class="duration">2-3 horas</div>
   </footer>
 </div>
 </div>
