Center header text on frontpage

--- a/_includes/jumbotron.html
+++ b/_includes/jumbotron.html
@@ -1,8 +1,10 @@
 {% assign l = site.data.l10n.[page.lang] %}
 
 <div class="jumbotron">
-  <h1>{{ l.activate }}</h1>
-  <p class="lead">
-    {{ l.activate-description }}
-  </p>
+  <section class="flex-container">
+    <h1>{{ l.activate }}</h1>
+    <p class="lead">
+      {{ l.activate-description }}
+    </p>
+  </section>
 </div>
