Use pt-BR for our current PT translation

--- a/_includes/pt-BR/activities.html
+++ b/_includes/pt-BR/activities.html
@@ -3,11 +3,11 @@
   <header class="item-header">
     <img src="/assets/img/techspeakers-header.png" alt="Header image">
   </header>
-  <h2><a href="/pt/techspeakers/">Organize uma palestra de tecnologia com Tech Speakers!</a></h2>
+  <h2><a href="/pt-BR/techspeakers/">Organize uma palestra de tecnologia com Tech Speakers!</a></h2>
   <div class="item-content" markdown="1">
 Na Mozilla nós estamos trabalhando para ajudar a manter a internet saudável, aberta e acessível a todos, precisamos nos envolver com pessoas que estão a frente da construção da Internet: desenvolvedores web, designers e outros tecnólogos que se preocupam com a web aberta. Precisamos animá-los sobre a Mozilla como uma líder de tecnologia.
 
-[Saiba mais](/pt/techspeakers/).
+[Saiba mais](/pt-BR/techspeakers/).
   </div>
   <footer class="item-footer">
     <div class="tags">Programação</div>
@@ -19,11 +19,11 @@ Na Mozilla nós estamos trabalhando para ajudar a manter a internet saudável, a
   <header class="item-header">
     <img src="/assets/img/guidelines-header.png" alt="Header image">
   </header>
-  <h2><a href="/pt/community-participation-guideline/">Diretrizes de Participação Comunitária</a></h2>
+  <h2><a href="/pt-BR/community-participation-guideline/">Diretrizes de Participação Comunitária</a></h2>
   <div class="item-content" markdown="1">
 Larissa Shapiro, e o time de D&I da Mozilla estiveram ocupados este ano desenvolvendo a versão 2.0 das [Diretrizes de Participação Comunitária da Mozilla (CPG)](https://www.mozilla.org/en-US/about/governance/policies/participation/), e estamos trazendo [este rascunho para você](https://docs.google.com/document/d/1sElGXuZ0W31iPshvmj0CR2f6woF6V8wqrrJHzJ0pnpU/edit#heading=h.rf21kwgxk0hb) e a comunidade Mozilla visando receber comentários/feedbacks antes do lançamento no início de abril. Completar esta atividade é uma contribuição valiosa para a Mozilla, e o reconhecimento dessa contribuição é incluído como uma etapa final.
 
-[Saiba mais](/pt/community-participation-guideline/).
+[Saiba mais](/pt-BR/community-participation-guideline/).
   </div>
   <footer class="item-footer">
     <div class="tags">Participação</div>
@@ -35,11 +35,11 @@ Larissa Shapiro, e o time de D&I da Mozilla estiveram ocupados este ano desenvol
   <header class="item-header">
     <img src="/assets/img/webextensions-header.png" alt="Header image">
   </header>
-  <h2><a href="/pt/webextensions/">Construa sua própria WebExtension para o Firefox</a></h2>
+  <h2><a href="/pt-BR/webextensions/">Construa sua própria WebExtension para o Firefox</a></h2>
   <div class="item-content" markdown="1">
  Os complementos fornecem uma maneira segura, simples e poderosa de personalizar sua experiência de navegação. Com as APIs do WebExtensions, é mais fácil do que nunca criar extensões que podem ser portadas facilmente para o Firefox, Chrome, Edge e Opera. Através desta atividade você vai ajudar a conectar novos desenvolvedores com a oportunidade de criar complementos para resolver problemas reais e tornar suas vidas e a web melhor.
 
-[Saiba mais](/pt/webextensions/).
+[Saiba mais](/pt-BR/webextensions/).
   </div>
   <footer class="item-footer">
     <div class="tags">Programação</div>
@@ -51,11 +51,11 @@ Larissa Shapiro, e o time de D&I da Mozilla estiveram ocupados este ano desenvol
   <header class="item-header">
     <img src="/assets/img/rust-header.png" alt="Header image">
   </header>
-  <h2><a href="/pt/rust-hack/">Mergulhe em Rust</a></h2>
+  <h2><a href="/pt-BR/rust-hack/">Mergulhe em Rust</a></h2>
   <div class="item-content" markdown="1">
 Rust é uma linguagem de programação para sistemas, importante para o futuro da Web. Ela roda extremamente rápido, previne falhas de acesso do sistema e garante a segurança dos processos. Com sua ajuda nós queremos que mais desenvolvedores entendam, usem e evangelizem essa linguagem, desta forma faremos a Web melhor e mais segura.
 
-[Saiba mais](/pt/rust-hack/).
+[Saiba mais](/pt-BR/rust-hack/).
   </div>
   <footer class="item-footer">
     <div class="tags">Programação</div>
@@ -67,11 +67,11 @@ Rust é uma linguagem de programação para sistemas, importante para o futuro d
   <header class="item-header">
     <img src="/assets/img/webvr-header.png" alt="Header image">
   </header>
-  <h2><a href="/pt/webvr-camp/">WebVR Camp</a></h2>
+  <h2><a href="/pt-BR/webvr-camp/">WebVR Camp</a></h2>
   <div class="item-content" markdown="1">
 O A-Frame é um framework web para o desenvolvimento de experiências com Realidade Virtual, tornando fácil para qualquer um se envolver com Realidade Virtual. Realize eventos para introduzir o ambiente 3D para desenvolvedores e programe algumas demonstrações legais. Isso irá promover o WebVR, uma plataforma aberta para realidade virtual que irá alavancar a Web.
 
-[Saiba mais](/pt/webvr-camp/).
+[Saiba mais](/pt-BR/webvr-camp/).
   </div>
   <footer class="item-footer">
     <div class="tags">Programação</div>
@@ -83,11 +83,11 @@ O A-Frame é um framework web para o desenvolvimento de experiências com Realid
   <header class="item-header">
     <img src="/assets/img/webcompat-header.png" alt="Header image">
   </header>
-  <h2><a href="/pt/webcompat-sprint/">Sprint de Compatibilidade Web</a></h2>
+  <h2><a href="/pt-BR/webcompat-sprint/">Sprint de Compatibilidade Web</a></h2>
   <div class="item-content" markdown="1">
 A Compatibilidade Web, capacidade de executar todo e qualquer conteúdo da Web em todos os navegadores, é importante. Existem diversos mecanismos de conteúdos web executando em diversos dispositivos, e algumas vezes com um pouco de teste e pequenos ajustes em seus websites, desenvolvedores podem garantir que mais usuários tenham a experiência completa desejada. Teste websites e espalhe a mensagem sobre compatibilidade.
 
-[Saiba mais](/pt/webcompat-sprint/).
+[Saiba mais](/pt-BR/webcompat-sprint/).
   </div>
   <footer class="item-footer">
     <div class="tags">Teste</div>
