--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,6 +11,7 @@
   <link rel="shortcut icon" href="/assets/favicon.ico">
   <link rel="stylesheet" href="//code.cdn.mozilla.net/fonts/fira.css">
   <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="/assets/css/datepicker/bootstrap-datepicker3.min.css">
   <link rel="stylesheet" href="/assets/css/bootstrap-sortable.css">
   <link rel="stylesheet" href="/assets/css/jquery.bxslider.min.css">
   <link rel="stylesheet" href="/assets/css/main.css">
