--- a/_includes/formcontent.html
+++ b/_includes/formcontent.html
@@ -472,3 +472,5 @@
   <h2>Thank you!</h2>
   <p>Your answer has been submitted.</p>
 </div>
+
+<iframe src="#" id="no-target" name="no-target" style="visibility:hidden"></iframe>
