add required & other option

--- a/_includes/formcontent.html
+++ b/_includes/formcontent.html
@@ -3,7 +3,7 @@
     <label class="control-label">What kind of event was this?</label>
     <div class="radio">
       <label>
-        <input type="radio" name="q1" value="Rust">
+        <input type="radio" name="q1" value="Rust" required>
         Rust
       </label>
     </div>
@@ -34,7 +34,7 @@
   </div>
   <div class="form-group required">
     <label class="control-label">Who was the main Rep who organized this event?</label>
-    <select class="form-control" id="input-q2" name="q2">
+    <select class="form-control" id="input-q2" name="q2" required>
       <option>Abbackar DIOMANDE</option>
       <option>Abdelrahman Manna</option>
       <option>Abdelrahman Samy</option>
@@ -402,7 +402,7 @@
   </div>
   <div class="form-group required">
     <label class="control-label">What is the date of the event you attended?</label>
-    <input class="form-control" id="date" name="date" data-toggle="datepicker" data-date-format="mm/dd/yyyy">
+    <input class="form-control" id="date" name="date" data-toggle="datepicker" data-date-format="mm/dd/yyyy" required>
   </div>
   <div class="form-group required">
     <label class="control-label">How likely is it that you would recommend participating in this event to a friend or colleague?</label>
@@ -411,7 +411,7 @@
         Not likely at all
       </label>
       <label class="radio-inline">
-        <input type="radio" name="q4" value="1"> 1
+        <input type="radio" name="q4" value="1" required> 1
       </label>
       <label class="radio-inline">
         <input type="radio" name="q4" value="2"> 2
@@ -438,11 +438,11 @@
   </div>
   <div class="form-group required">
     <label class="control-label">Your name</label>
-    <input type="text" class="form-control" id="input-q5" name="q5" placeholder="Name">
+    <input type="text" class="form-control" id="input-q5" name="q5" placeholder="Name" required>
   </div>
   <div class="form-group required">
     <label class="control-label">Your e-mail (please add an email associated with your github account if you have one)</label>
-    <input type="email" class="form-control" id="input-q6" name="q6" placeholder="Email">
+    <input type="email" class="form-control" id="input-q6" name="q6" placeholder="Email" required>
   </div>
   <div class="form-group required">
     <label class="control-label">What is your profession?</label>
@@ -454,7 +454,7 @@
     </div>
     <div class="radio">
       <label>
-        <input type="radio" name="q7" value="Programmer">
+        <input type="radio" name="q7" value="Programmer" required>
         Programmer
       </label>
     </div>
@@ -462,6 +462,12 @@
       <label>
         <input type="radio" name="q7" value="Student - Computer Science">
         Student - Computer Science
+      </label>
+    </div>
+    <div class="radio">
+      <label>
+        <input type="radio" name="q7" value="Other"> Other
+        <input type="text" class="form-control" id="input-q7" name="q7o" placeholder="Please specify">
       </label>
     </div>
   </div>
