disable lang in form page

--- a/_includes/id/formcontent.html
+++ b/_includes/id/formcontent.html
@@ -467,7 +467,7 @@
     <div class="radio">
       <label>
         <input type="radio" name="q7" value="Other"> Lainnya
-        <input type="text" class="form-control" id="input-q7" name="q7o" placeholder="Please specify">
+        <input type="text" class="form-control" id="input-q7" name="q7o" placeholder="Tolong sebutkan">
       </label>
     </div>
   </div>
