--- a/_layouts/impactform.html
+++ b/_layouts/impactform.html
@@ -13,9 +13,10 @@
       </div>
     </div>
 
-    {% include footer.html %}
+    {% include footer-nolang.html %}
 
     {% include js.html %}
+    
     <script src="/assets/js/bootstrap-datepicker.min.js"></script>
     <script src="/assets/js/moment.min.js"></script>
     <script src="/assets/js/impactform.js"></script>
