--- a/_layouts/impactform.html
+++ b/_layouts/impactform.html
@@ -13,7 +13,7 @@
       </div>
     </div>
 
-    {% include footer-nolang.html %}
+    {% include footer.html %}
 
     {% include js.html %}
     
