Add Nightly activity

--- a/_includes/activities.html
+++ b/_includes/activities.html
@@ -1,4 +1,20 @@
 <div class="row is-flex">
+<div class="activity-card testing col-md-4">
+  <header class="item-header">
+    <img src="/assets/img/nightly-header.png" alt="Header image">
+  </header>
+  <h2><a href="/nightly/">Using & Testing Nightly</a></h2>
+  <div class="item-content" markdown="1">
+This activity has great potential to make an impact by increasing overall involvement in Nightly, simply by introducing community to tasks that they can engage in related to Nightly. Finding and filing issues early in the cycle means by the time Firefox gets to release, the code is in good shape.
+
+[Find out more](/nightly/).
+  </div>
+  <footer class="item-footer">
+    <div class="tags">Testing</div>
+    <div class="duration">1-3 hours</div>
+  </footer>
+</div>
+
 <div class="activity-card programming col-md-4">
   <header class="item-header">
     <img src="/assets/img/techspeakers-header.png" alt="Header image">
