--- a/_includes/es/activities.html
+++ b/_includes/es/activities.html
@@ -35,9 +35,9 @@ As Mozilla we’re working to help to keep the internet healthy, open and access
   <header class="item-header">
     <img src="/assets/img/webextensions-header.png" alt="Header image">
   </header>
-  <h2><a href="/es/webextensions/">Build Your Own WebExtension Add-on for Firefox</a></h2>
+  <h2><a href="/es/webextensions/">Build Your Own Extension for Firefox</a></h2>
   <div class="item-content" markdown="1">
-Add-ons provide a safe, simple, and powerful way to personalize your browsing experience. With WebExtensions APIs, it’s easier than ever to create extensions that can be easily ported to Firefox, Chrome, Edge, and Opera. Through this activity you’ll help connect new developers with an opportunity to create add-ons to solve real problems and make their lives and the web better.
+Add-ons provide a safe, simple, and powerful way to personalize your browsing experience. With WebExtensions APIs, it’s easier than ever to create extensions that can be easily ported to Firefox, Chrome, Edge, and Opera. Through this activity you’ll help connect new developers with an opportunity to create browser extensions to solve real problems and make their lives and the web better.
 
 [Descubre más](/es/webextensions/).
   </div>
