--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,73 +1,53 @@
-header {
+.navbar-default {
     color: #000;
     min-height: 40px;
-    background: #fff;
-    height: 100px;
     border-bottom: 5px var(--brand-color) solid;
-    position: relative;
 }
 
 img.brand {
     max-width: 250px;
-    margin: 7px 10px 10px 0;
+    margin: 7px 50px 10px 0;
+    height: 100%;
 }
 
-.page-link {
+.navbar-nav{
+    margin: 10px;
+}
+
+.nav > li > a{
+    display: inline-block;
+}
+
+/* Mobile toggle button */
+.navbar-default .navbar-toggle{
+    border: 0;
+    margin: 15px;
+}
+
+.navbar-default .navbar-toggle:hover, 
+.navbar-default .navbar-toggle:focus{
+    background: none;
+}
+
+.navbar-default .navbar-nav > li > a,
+.navbar-default .navbar-nav > li > a:active,
+.navbar-default .navbar-nav > li > a:focus{
     font-size: 16px;
     font-weight: bold;
     text-transform: uppercase;
-    line-height: 60px;
-    margin-bottom: 0;
-    margin-right: 20px;
-    float: left;
     color: var(--brand-color);
+    padding-bottom: 10px;
 }
 
-header a.page-link,
-header a.page-link:active,
-header a.page-link:focus {
+.navbar-default .navbar-nav > li > a:hover {
     color: var(--brand-color);
-}
-
-@media all and (max-width: 992px) {
-    header a.page-link,
-    header a.page-link:active,
-    header a.page-link:focus {
-        color: #FFF;
-    }
-}
-
-header a.page-link:hover {
     border-bottom: 2px solid var(--brand-color);
     box-shadow: inset 0 -2px 0 var(--brand-color);
 }
 
-.page-link:first-child {
-    margin-left: 50px;
-}
-
-button.navbar-toggle {
-    margin: 0;
-    font-size: 1.5em;
-}
-
-.site-title {
-    font-size: 18px;
-    font-weight: bold;
-    text-transform: uppercase;
-    line-height: 60px;
-    margin-bottom: 0;
-    margin-right: 23px;
-    float: left;
-    color: #e29fa0;
-    min-width: 260px;
-}
-
-.site-title:visited {
-    color: #e29fa0;
-}
-
-.site-title:hover {
-    color: #fff;
-    text-decoration: none;;
+/* Phones */
+@media only screen and (max-width : 400px) {
+    img.brand{
+        max-width: 180px;
+    }
 }
