--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,28 @@
+html {
+  height: 100%;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+}
+
+#root {
+  position: relative;
+  padding-bottom: 24rem;
+  min-height: 100%;
+}
+
+@media all and (max-width: 767px) {
+  #root {
+    padding-bottom: calc(var(--spacing-unit) * 19);
+  }
+}
+
+@media all and (max-width: 360px) {
+  #root {
+    padding-bottom: calc(var(--spacing-unit) * 24);
+  }
 }
