--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -39,6 +39,10 @@ footer .icon-container {
       width: 100%;
   }
 
+  footer .icons {
+    margin-bottom: 40px;
+  }
+
   footer .icon {
       text-align: center;
   }
