--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -5,12 +5,9 @@ footer {
   font-size: 0.9em;
   line-height: 1.3;
   width: 100%;
+  position: relative;
   margin: 0;
-
-  position: absolute;
-  right: 0;
   bottom: 0;
-  left: 0;
   padding: 2rem 0;
 }
 
@@ -50,7 +47,6 @@ footer .icon-container {
   footer .footer-icon {
       display: block;
       margin: 5px auto;
-      margin-right: auto;
       width: 20px;
   }
 }
