Better font loading (fixes #14)

--- a/src/App.css
+++ b/src/App.css
@@ -146,7 +146,7 @@ li {
  */
 
 h1 {
-    font-family: 'Zilla Slab Highlight', cursive;
+    font-family: 'Zilla Slab Highlight', sans-serif;
     font-weight: 400;
 }
 
